@@ -400,6 +400,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|curator
+operator|.
+name|utils
+operator|.
+name|EnsurePath
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|classification
@@ -1776,6 +1790,65 @@ operator|new
 name|IOException
 argument_list|(
 literal|"Could not start Curator Framework"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+else|else
+block|{
+comment|// If namespace parents are implicitly created, they won't have ACLs.
+comment|// So, let's explicitly create them.
+name|CuratorFramework
+name|nullNsFw
+init|=
+name|zkClient
+operator|.
+name|usingNamespace
+argument_list|(
+literal|null
+argument_list|)
+decl_stmt|;
+name|EnsurePath
+name|ensureNs
+init|=
+name|nullNsFw
+operator|.
+name|newNamespaceAwareEnsurePath
+argument_list|(
+literal|"/"
+operator|+
+name|zkClient
+operator|.
+name|getNamespace
+argument_list|()
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|ensureNs
+operator|.
+name|ensure
+argument_list|(
+name|nullNsFw
+operator|.
+name|getZookeeperClient
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Could not create namespace"
 argument_list|,
 name|e
 argument_list|)
