@@ -36,6 +36,26 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|concurrent
 operator|.
 name|Callable
@@ -51,6 +71,76 @@ operator|.
 name|concurrent
 operator|.
 name|ExecutorService
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|curator
+operator|.
+name|RetryPolicy
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|curator
+operator|.
+name|framework
+operator|.
+name|CuratorFramework
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|curator
+operator|.
+name|framework
+operator|.
+name|CuratorFrameworkFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|curator
+operator|.
+name|framework
+operator|.
+name|api
+operator|.
+name|ACLProvider
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|curator
+operator|.
+name|retry
+operator|.
+name|ExponentialBackoffRetry
 import|;
 end_import
 
@@ -179,6 +269,62 @@ operator|.
 name|web
 operator|.
 name|DelegationTokenManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|ZooDefs
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|data
+operator|.
+name|ACL
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|data
+operator|.
+name|Id
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|server
+operator|.
+name|auth
+operator|.
+name|DigestAuthenticationProvider
 import|;
 end_import
 
@@ -1711,6 +1857,310 @@ name|tm1
 operator|.
 name|destroy
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testACLs ()
+specifier|public
+name|void
+name|testACLs
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|DelegationTokenManager
+name|tm1
+decl_stmt|;
+name|String
+name|connectString
+init|=
+name|zkServer
+operator|.
+name|getConnectString
+argument_list|()
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+name|getSecretConf
+argument_list|(
+name|connectString
+argument_list|)
+decl_stmt|;
+name|RetryPolicy
+name|retryPolicy
+init|=
+operator|new
+name|ExponentialBackoffRetry
+argument_list|(
+literal|1000
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+name|String
+name|userPass
+init|=
+literal|"myuser:mypass"
+decl_stmt|;
+specifier|final
+name|ACL
+name|digestACL
+init|=
+operator|new
+name|ACL
+argument_list|(
+name|ZooDefs
+operator|.
+name|Perms
+operator|.
+name|ALL
+argument_list|,
+operator|new
+name|Id
+argument_list|(
+literal|"digest"
+argument_list|,
+name|DigestAuthenticationProvider
+operator|.
+name|generateDigest
+argument_list|(
+name|userPass
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|ACLProvider
+name|digestAclProvider
+init|=
+operator|new
+name|ACLProvider
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|List
+argument_list|<
+name|ACL
+argument_list|>
+name|getAclForPath
+parameter_list|(
+name|String
+name|path
+parameter_list|)
+block|{
+return|return
+name|getDefaultAcl
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|List
+argument_list|<
+name|ACL
+argument_list|>
+name|getDefaultAcl
+parameter_list|()
+block|{
+name|List
+argument_list|<
+name|ACL
+argument_list|>
+name|ret
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|ACL
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|ret
+operator|.
+name|add
+argument_list|(
+name|digestACL
+argument_list|)
+expr_stmt|;
+return|return
+name|ret
+return|;
+block|}
+block|}
+decl_stmt|;
+name|CuratorFramework
+name|curatorFramework
+init|=
+name|CuratorFrameworkFactory
+operator|.
+name|builder
+argument_list|()
+operator|.
+name|connectString
+argument_list|(
+name|connectString
+argument_list|)
+operator|.
+name|retryPolicy
+argument_list|(
+name|retryPolicy
+argument_list|)
+operator|.
+name|aclProvider
+argument_list|(
+name|digestAclProvider
+argument_list|)
+operator|.
+name|authorization
+argument_list|(
+literal|"digest"
+argument_list|,
+name|userPass
+operator|.
+name|getBytes
+argument_list|(
+literal|"UTF-8"
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|curatorFramework
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|ZKDelegationTokenSecretManager
+operator|.
+name|setCurator
+argument_list|(
+name|curatorFramework
+argument_list|)
+expr_stmt|;
+name|tm1
+operator|=
+operator|new
+name|DelegationTokenManager
+argument_list|(
+name|conf
+argument_list|,
+operator|new
+name|Text
+argument_list|(
+literal|"bla"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|tm1
+operator|.
+name|init
+argument_list|()
+expr_stmt|;
+comment|// check ACL
+name|String
+name|workingPath
+init|=
+name|conf
+operator|.
+name|get
+argument_list|(
+name|ZKDelegationTokenSecretManager
+operator|.
+name|ZK_DTSM_ZNODE_WORKING_PATH
+argument_list|)
+decl_stmt|;
+name|verifyACL
+argument_list|(
+name|curatorFramework
+argument_list|,
+literal|"/"
+operator|+
+name|workingPath
+argument_list|,
+name|digestACL
+argument_list|)
+expr_stmt|;
+name|tm1
+operator|.
+name|destroy
+argument_list|()
+expr_stmt|;
+name|ZKDelegationTokenSecretManager
+operator|.
+name|setCurator
+argument_list|(
+literal|null
+argument_list|)
+expr_stmt|;
+name|curatorFramework
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|verifyACL (CuratorFramework curatorFramework, String path, ACL expectedACL)
+specifier|private
+name|void
+name|verifyACL
+parameter_list|(
+name|CuratorFramework
+name|curatorFramework
+parameter_list|,
+name|String
+name|path
+parameter_list|,
+name|ACL
+name|expectedACL
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+name|List
+argument_list|<
+name|ACL
+argument_list|>
+name|acls
+init|=
+name|curatorFramework
+operator|.
+name|getACL
+argument_list|()
+operator|.
+name|forPath
+argument_list|(
+name|path
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|acls
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|expectedACL
+argument_list|,
+name|acls
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
 expr_stmt|;
 block|}
 comment|// Since it is possible that there can be a delay for the cancel token message
